--- a/views/Users/EditUser.pug
+++ b/views/Users/EditUser.pug
@@ -1,17 +1,19 @@
 extends ../layout
 
 block content
-    h1 Edit User
-    form(action="/users/RegisterUser/Edit/"+RegisterUser._id , method="post")
-        .form-group
-            label(for="name") User Email
-            input#name(type="text", class="form-control",  name="Email" value=RegisterUser.Email required)
-        .form-group
-            label(for="name") User Username
-            input#name(type="text", class="form-control", name="Username" value=RegisterUser.Username required)
-        .form-group
-            label(for="price") User Password
-            input#price(type="text", class="form-control", name="Password", value=RegisterUser.Password required)
-        
-        input(type="submit", class="btn btn-info")
-    
+     .container-fluid
+        .col-8.m-auto.py-2
+            h1 Edit User
+            form(action="/users/RegisterUser/Edit/"+RegisterUser._id , method="post")
+                .form-group
+                    label(for="name") User Email
+                    input#name(type="text", class="form-control",  name="Email" value=RegisterUser.Email required)
+                .form-group
+                    label(for="name") User Username
+                    input#name(type="text", class="form-control", name="Username" value=RegisterUser.Username required)
+                .form-group
+                    label(for="price") User Password
+                    input#price(type="text", class="form-control", name="Password", value=RegisterUser.Password required)
+                
+                input(type="submit", class="btn btn-info btn-lg")
+            
