--- a/views/nav.pug
+++ b/views/nav.pug
@@ -43,7 +43,7 @@
         </li>
       if user||admin
         <li class="nav-item">
-          <a class="nav-link" href="/users/logOut">LogOut</a>
+           a.nav-link( href="/users/logOut") LogOut 
         </li>
      
     </ul>
