Update For Admin

--- a/views/Users/Login.pug
+++ b/views/Users/Login.pug
@@ -19,4 +19,5 @@ block content
                 input(type="submit", value="Log In" class="btn btn-success btn-lg")
                 a.btn.btn-info.ml-4.btn-lg(href="/users/register") Register
                 span.text-primary (Dont have account Register Now)
-                </div>
+               
+                h4 Note: Admin can also Login in this Page Username And Password for admin is Available on Github Repository (Folder name AdminPassword)
