--- a/views/add.pug
+++ b/views/add.pug
@@ -4,7 +4,7 @@ block content
     container-fluid
         .col-8.m-auto.py-2
             h1
-                p.text-danger Edurekas Course List
+                p.text-danger Product List
             h1.danger=a
             form(action="/product/add", method="post")
                 .form-group
