--- a/views/edit.pug
+++ b/views/edit.pug
@@ -3,7 +3,7 @@ extends ./layout
 block content
     .container-fluid
         .col-8.m-auto.py-2
-            h1 Edit Course
+            h1 Edit Product
             form(action="/product/Edit/"+product._id , method="post")
                 .form-group
                     label(for="name") Product Name
